<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/address"
        android:textColor="@color/colorHeading"
        android:textSize="@dimen/title_txt_size"
        android:layout_marginStart="@dimen/margin_large" />

    <TextView
        android:id="@+id/addressValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin"
        android:layout_marginLeft="@dimen/content_margin"
        android:maxLines="2"
        android:text="@string/redondo_beach"
        android:textColor="@color/colorContent"
        android:textSize="@dimen/value_txt_size"
        android:layout_marginStart="@dimen/content_margin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:background="@color/colorLine" />

    <TextView
        android:id="@+id/PhoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_marginLeft="@dimen/content_margin"
        android:text="@string/phone_number"
        android:textColor="@color/colorHeading"
        android:textSize="@dimen/title_txt_size"
        android:layout_marginStart="@dimen/content_margin" />

    <TextView
        android:id="@+id/phoneNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin"
        android:layout_marginLeft="@dimen/content_margin"
        android:maxLines="2"
        android:textColor="@color/colorContent"
        android:textSize="@dimen/value_txt_size"
        android:layout_marginStart="@dimen/content_margin" />


</LinearLayout>