<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="256dp">
        <ImageView
            android:id="@+id/placeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grail_churros"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_of_place"/>
        <ImageView
            android:id="@+id/topBackBtn"
            android:layout_width="@dimen/back_btn_size"
            android:layout_height="@dimen/back_btn_size"
            android:src="@drawable/btn_back"
            android:padding="@dimen/content_margin"
            android:contentDescription="Back button" />
        <TextView
            android:id="@+id/placeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/placeCity"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/content_margin"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/placeCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/content_margin"
            android:layout_marginLeft="@dimen/content_margin"
            android:maxLines="1"
            android:textColor="#e8f5e9"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/content_margin" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llOpenTime"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#fafafa"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_large">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_openingtime"
                android:contentDescription="@string/clock_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/openingDayTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_day"
                    android:textColor="@color/colorHeading"
                    android:textSize="@dimen/value_txt_size" />

                <TextView
                    android:id="@+id/openingDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/value_txt_size" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_openingday"
                android:contentDescription="calendar image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/openingTimeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_time"
                    android:textColor="@color/colorHeading"
                    android:textSize="@dimen/value_txt_size" />

                <TextView
                    android:id="@+id/openingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/value_txt_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/colorHeading"
                android:textSize="@dimen/value_txt_size" />

            <TextView
                android:id="@+id/read_more_Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/read_more"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/value_txt_size"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:autoLink="all"
            android:maxLines="3"
            android:textColor="@color/colorContent"
            android:lineSpacingExtra="9dp"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine" />
        <FrameLayout
            android:id="@+id/fragment_holder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_frame"/>
        <include layout="@layout/content_contact_info" />
    </LinearLayout>
</LinearLayout>
</ScrollView>